<resources>
    <string name="app_name">MOAP Movie Apps</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Jangan khawatir ketinggalan\nupdate terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan E-Wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="ferdy_mohamad_firdaus">Ferdy Mohamad Firdaus</string>
    <string name="kzuferdy_gmail">kzuferdy@gmail.com</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nFerdy Mohamad</string>
    <string name="simpan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket_">BELI TIKET</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">BAYAR SEKARANG</string>
    <string name="batalkan">BATALKAN</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="seats">Seats</string>
    <string name="total_bayar">Total Harus Bayar</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="lewati_buuton">LEWATI</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="desc">desc</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun">DAFTAR AKUN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datetime">Datetime</string>
    <string name="ewallet">E-wallet</string>
    <string name="totalbalance">Total Balance</string>
    <string name="home">HOME</string>
    <string name="lihat_tike">Lihat Tiket</string>
    <string name="happy_watch">Happy Watching!</string>
    <string name="my_wallet">Wallet</string>
    <string name="edit_profile">Edit Profile</string>
</resources>